--- a/pages/my_booking/mybooking-0.html
+++ b/pages/my_booking/mybooking-0.html
@@ -13,100 +13,21 @@
     <title>Buddy Nest - การจองของฉัน</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../../assets/css/globals.css">
-    <link rel="stylesheet" href="../../assets/css/footer.css">
+   <link rel="stylesheet" href="../../assets/css/globals.css">
+   <link rel="stylesheet" href="../../assets/css/footer.css">
+   <link rel="stylesheet" href="../../assets/css/nav_booking.css">
+   <link rel="stylesheet" href="../../assets/css/head_booking.css">
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #EA73D3;
-            color: #210000;
-        }
-
-        .logo {
-            width: 100px;
-        }
-
-        header {
-            background-color: #FFE0AD;
-            padding: 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        header .nav {
-            display: flex;
-            gap: 1.5rem;
-        }
-
-        header .nav a {
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-        }
-
-        header .auth-buttons {
-            display: flex;
-            align-items: center;
-            gap: 1.5rem;
-        }
-
-        header .auth-buttons a {
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-        }
-
-        header .auth-buttons button {
-            background-color: #e2f5f5;
-            border: 1px solid #ccc;
-            border-radius: 20px;
-            padding: 0.5rem 1rem;
-            cursor: pointer;
-            font-size: 0.9rem;
-        }
-
+        
         main {
             text-align: center;
             margin: 2rem auto;
             max-width: 600px;
         }
 
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #f5d998;
-            padding: 1rem 0;
-            border-bottom: 2px solid #d88fd8;
-        }
-
-        nav .tab {
-            flex: 1;
-            text-align: center;
-            font-weight: bold;
-            padding: 0.5rem;
-            cursor: pointer;
-        }
-
-        nav .tab.active {
-            border-bottom: 3px solid red;
-        }
-
-        nav .tab a {
-            text-decoration: none;
-            color: inherit;
-            display: block;
-        }
-
         .booking-details {
-            background-color: #fff3f3;
+            background-color: #FEFAF2;
             border-radius: 10px;
             padding: 1.5rem;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
@@ -147,7 +68,6 @@
             font-size: 1.1rem;
             color: #444;
         }
-
 
     </style>
 </head>
