--- a/index.html
+++ b/index.html
@@ -17,66 +17,9 @@
     <link rel="stylesheet" href="assets/css/navbar.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-
+    <link rel="stylesheet" href="assets/css/search.css">
     <style>
-        .search-section {
-            background-color: #d9f6f8;
-            border-top: 1px solid #000000;
-            border-bottom: 1px solid #000000;
-            padding: 1rem 0;
-
-            .search-container {
-                max-width: 80%;
-                margin: 0 auto;
-                display: flex;
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            h4 {
-                color: #5a5a5a;
-                font-weight: bold;
-            }
-
-            .search-category {
-                .service-buttons {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-evenly;
-                    margin: 1rem 0;
-
-                    button {
-                        padding: 10px 20px;
-                        border: none;
-                        background-color: #ffe8b2;
-                        border-radius: 5px;
-                        cursor: pointer;
-                    }
-                }
-            }
-
-            .search-area {
-                .search-area-container {
-                    display: flex;
-                    flex-direction: row;
-                    align-items: center;
-                    justify-content: center;
-                    gap: 2rem;
-                }
-
-                select {
-                    margin: 10px;
-                    padding: 10px;
-                    border: 1px solid #ccc;
-                    border-radius: 5px;
-                }
-
-                .results {
-                    display: none;
-                }
-            }
-        }
-
+        
         .cards {
             display: flex;
             justify-content: center;
