--- a/pages/my_booking/mybooking-1.html
+++ b/pages/my_booking/mybooking-1.html
@@ -14,104 +14,10 @@
    <!-- CSS -->
    <link rel="stylesheet" href="../../assets/css/globals.css">
    <link rel="stylesheet" href="../../assets/css/footer.css">
-   
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+   <link rel="stylesheet" href="../../assets/css/nav_booking.css">
+   <link rel="stylesheet" href="../../assets/css/main_booking.css">
+   <link rel="stylesheet" href="../../assets/css/head_booking.css">
 
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #EA73D3;
-            color: #210000;
-        }
-            .logo {
-            width: 100px;
-        }
-
-        header {
-            background-color: #FFE0AD;
-            padding: 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        header .nav {
-            display: flex;
-            gap: 1.5rem;
-        }
-
-        header .nav a {
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-        }
-
-        header .auth-buttons {
-            display: flex;
-            align-items: center;
-            gap: 1.5rem;
-        }
-
-        header .auth-buttons a {
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-        }
-
-        header .auth-buttons button {
-            background-color: #e2f5f5;
-            border: 1px solid #ccc;
-            border-radius: 20px;
-            padding: 0.5rem 1rem;
-            cursor: pointer;
-            font-size: 0.9rem;
-        }
-        main {
-            text-align: center;
-            margin-top: 3rem;
-        }
-
-        main img {
-            width: 300px;
-            margin-bottom: 1rem;
-        }
-
-        main h1 {
-            font-size: 1.2rem;
-            color: #555;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #f5d998;
-            padding: 1rem 0;
-            border-bottom: 2px solid #d88fd8;
-        }
-
-        nav .tab {
-            flex: 1;
-            text-align: center;
-            font-weight: bold;
-            padding: 0.5rem;
-            cursor: pointer;
-        }
-
-        nav .tab.active {
-            border-bottom: 3px solid red;
-        }
-
-        nav .tab a {
-            text-decoration: none;
-            color: inherit;
-            display: block;
-        }
-
-    </style>
 </head>
 <body>
     <header>
@@ -120,10 +26,10 @@
         </div>
         <div></div> <!-- ช่องว่างสำหรับจัดให้อยู่ขวา -->
         <div class="auth-buttons">
-            <a href="index.html">หน้าหลัก</a>
-            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="pages/registration.html"><button>Register</button></a>
+            <a href="../../index.html">หน้าหลัก</a>
+            <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="../../pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="../../pages/registration.html"><button>Register</button></a>
         </div>
     </header>
 
