--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -140,16 +140,16 @@
 
         <div class="right-section">
             <div class="sign-in-header">
-                <img src="../../img/sign-in1.png" alt="Sign In Icon">
+                <img src="/img/sign-in.png" alt="Sign In Icon">
             </div>
             <form class="sign-in-form" id="signinForm">
                 <div id="error-message" class="error-message"></div>
                 <div class="input-field">
-                    <img src="../../img/sign-in.png" alt="Email Icon">
+                    <img src="/img/user.png" alt="Email Icon">
                     <input type="email" id="email" placeholder="Enter your email address" required>
                 </div>
                 <div class="input-field">
-                    <img src="../../img/key.png" alt="Password Icon">
+                    <img src="/img/password.png" alt="Password Icon">
                     <input type="password" id="password" name="Password" placeholder="Enter your password" required>
                     <button type="button" class="toggle-password" onclick="togglePassword()">
                         <i id="eye-icon" class="fas fa-eye"></i>
