--- a/pages/forgot_your_password.html
+++ b/pages/forgot_your_password.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buddy Nest - Forgot Password</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    
     <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
     <style>
         body {
@@ -41,7 +41,7 @@
         }
 
         .left-panel img {
-            max-width: 400px;
+            max-width: 500px;
             height: auto;
         }
 
@@ -153,11 +153,11 @@
         </div>
         <!-- Right Panel -->
         <div class="right-panel">
-            <div class="icon">
-                <i class="fas fa-user-circle"></i>
-            </div>
-            <h2>Forgot Your Password</h2>
-            <p>Please enter your email address. We will send you a link to reset your password.</p>
+
+            <img src="/img/forgot-password.png" style="width: 200px; height: auto;" alt="Forgot Password Icon">
+
+            <p style="font-size: 2rem;"><b>Forgot Your Password</b></p>
+            <p style="font-size: 1rem;"><b>Please enter your email address. We will send you a link to reset your password.</b></p>
             <form id="forgot-password-form">
                 <div class="form-group">
                     <i class="fas fa-envelope"></i>
