--- a/pages/registration.html
+++ b/pages/registration.html
@@ -38,7 +38,7 @@
                 width: 50%;
 
                 img {
-                    max-width: 20rem;
+                    max-width: 50rem;
                 }
 
                 .register-subheading {
@@ -162,16 +162,17 @@
         <!-- Left panel -->
         <section class="left-panel">
             <img src="../../img/โลโก้-1.png" alt="Buddynest Logo">
-            <h4 class="register-subheading">Register your account</h4>
         </section>
 
         <!-- Right panel -->
         <section class="right-panel">
+            
             <form id="register-form" class="register-form">
                 <div class="container">
                     <!-- Username -->
                     <section class="form-group">
-                        <label for="username">Username</label>
+                        <h1 style="font-size: 2rem;">Register Your Account</h1>
+                        <label for="username">Username</label>  
                         <input type="text" id="username" placeholder="Enter username" required>
                     </section>
 
