--- a/pages/my_booking/mybooking-0.html
+++ b/pages/my_booking/mybooking-0.html
@@ -18,7 +18,7 @@
    <link rel="stylesheet" href="../../assets/css/nav_booking.css">
    <link rel="stylesheet" href="../../assets/css/head_booking.css">
 
-    <style>
+    <style> 
         
         main {
             text-align: center;
@@ -87,12 +87,14 @@
         </div>
     </header>
 
+    <!-- Nav Booking -->
     <nav>
         <div class="tab active"><a href="../../pages/my_booking/mybooking-1.html">กำลังจะมาถึง</a></div>
         <div class="tab"><a href="../../pages/my_booking/mybooking-2.html">เสร็จสมบูรณ์</a></div>
         <div class="tab"><a href="../../pages/my_booking/mybooking-3.html">ยกเลิก</a></div>
     </nav>
 
+    <!-- Main -->
     <main>
         <section class="booking-details">
             <div class="booking-header">
@@ -118,6 +120,7 @@
 
     <br><br><br><br><br><br><br><br><br><br><br>
 
+    <!-- Footer -->
     <footer class="main-footer">
         <article class="footer-container">
             <!-- Team -->
@@ -162,6 +165,7 @@
         </article>
     </footer>
 
+    <!-- Copyright -->
     <footer class="bottom-footer">
         <p>© 2025 Buddy Nest. All Rights Reserved.</p>
     </footer>
