--- a/pages/my_booking/mybooking-3.html
+++ b/pages/my_booking/mybooking-3.html
@@ -34,19 +34,21 @@
         </div>
     </header>
 
+    <!-- Nav Booking -->
     <nav>
         <div class="tab"><a href="../../pages/my_booking/mybooking-1.html">กำลังจะมาถึง</a></div>
         <div class="tab"><a href="../../pages/my_booking/mybooking-2.html">เสร็จสมบูรณ์</a></div>
         <div class="tab active"><a href="../../pages/my_booking/mybooking-3.html">ยกเลิก</a></div>
     </nav>
 
+    <!-- Main -->
     <main>
         <img src="../../img/รูป1.png" alt="icon">
         <h1>ยังไม่มีการจองที่ถูกยกเลิก</h1>
     </main>
     <br><br><br><br><br><br><br><br><br><br><br>
     
-    
+    <!-- Footer -->
     <footer class="main-footer">
         <article class="footer-container">
             <!-- Team -->
@@ -91,6 +93,7 @@
         </article>
     </footer>
 
+    <!-- Copyright -->
     <footer class="bottom-footer">
         <p>© 2025 Buddy Nest. All Rights Reserved.</p>
     </footer>
