--- a/pages/pet_care/petory.html
+++ b/pages/pet_care/petory.html
@@ -41,28 +41,27 @@
         <img src="../../img/แบนเนอร์.png" alt="BuddyNest Banner">
     </header>
 
+    <!-- content -->
     <ul class="content">
         <li>
             <img src="../../img/ร้าน-6.png" alt="Kimfam Grooming">
             <div>
-            <h2>PETORY</h2>
-            <p><strong>ที่อยู่:</strong> 123/4 ถนนพหลโยธิน ตำบลเวียง อำเภอเมืองพะเยา จังหวัดพะเยา 56000<br>
-                <strong>เบอร์โทร:</strong> 098-765-4321
-                <strong>เวลาทำการ:</strong> ทุกวัน 09:00 - 18:00 น.<br>
-            </p>
-            <p><strong>บริการและราคา:</strong></p>
-            <p>
-                แมว 1-4 เดือน: ขนสั้น 80.-/99.- | ขนยาว 90.-/109.-<br>
-                แมวโต: ขนสั้น 110.-/129.- | ขนยาว 130.-/149.-<br>
-                หยอดไรหู 20.- | หยอดเห็บหมัด 50.- (พร้อมการ์ด) | ตัดขนอุ้งเท้า 20.-<br>
-            </p>
-            <br>
-            <a href="../../pages/payment/payment-3.html"><button class="button">จอง</button></a>
+                <h2>ร้าน : PETORY</h2>
+                <p><strong>ที่อยู่:</strong> 123/4 ถนนพหลโยธิน ตำบลเวียง อำเภอเมืองพะเยา จังหวัดพะเยา 56000</p>
+                <p><strong>เบอร์โทร:</strong> 098-765-4321</p>
+                <p><strong>เวลาทำการ:</strong> ทุกวัน 09:00 - 18:00 น.</p>
+                <p><strong>บริการและราคา:</strong></p>
+                <p>แมว 1-4 เดือน: ขนสั้น 80.-/99.- | ขนยาว 90.-/109.-</p>
+                <p>แมวโต: ขนสั้น 110.-/129.- | ขนยาว 130.-/149.-</p>
+                <p>หยอดไรหู 20.- | หยอดเห็บหมัด 50.- (พร้อมการ์ด) | ตัดขนอุ้งเท้า 20.-</p>
+                <a href="../../pages/payment/payment-3.html"><button class="button">จอง</button></a>
             </div>
         </li>
     </ul>
 
+    <br><br>
 
+    <!-- Footer -->
     <footer class="main-footer">
         <article class="footer-container">
             <!-- Team -->
@@ -107,6 +106,7 @@
         </article>
     </footer>
 
+    <!-- Copyright -->
     <footer class="bottom-footer">
         <p>© 2025 Buddy Nest. All Rights Reserved.</p>
     </footer>
