--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     <!-- Title -->
     <title>Buddy Nest - Home page</title>
-    
+
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/globals.css">
-    <link rel="stylesheet" href="assets/css/navbar.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/search.css">
+    <link rel="stylesheet" href="../../assets/css/globals.css">
+    <link rel="stylesheet" href="../../assets/css/navbar.css">
+    <link rel="stylesheet" href="../../assets/css/header.css">
+    <link rel="stylesheet" href="../../assets/css/footer.css">
+    <link rel="stylesheet" href="../../assets/css/search.css">
 
     <style>
         .search-section {
@@ -103,19 +103,19 @@
     <!-- Navbar -->
     <nav>
         <section class="logo-container">
-            <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
         </section>
         <section class="auth-buttons">
-            <a href="index.html">หน้าหลัก</a>
-            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="pages/registration.html"><button>Register</button></a>
+            <a href="../../index.html">หน้าหลัก</a>
+            <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="../../pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="../../pages/registration.html"><button>Register</button></a>
         </section>
     </nav>
 
     <!-- Header -->
     <header>
-        <img src="img/แบนเนอร์.png" alt="BuddyNest Banner">
+        <img src="../../img/แบนเนอร์.png" alt="BuddyNest Banner">
     </header>
 
     <article class="search-section">
@@ -123,11 +123,11 @@
             <section class="search-category">
                 <h4>ฉันกำลังมองหา 🔍</h4>
                 <div class="service-buttons">
-                    <a href="pages/pet_care.html"><button>ฝากเลี้ยง</button></a>
-                    <a href="pages/pet_care.html"><button>ดูแลตามบ้าน</button></a>
-                    <a href="pages/pet_care.html"><button>ดูแลรายวัน</button></a>
-                    <a href="pages/pet_care.html"><button>บริการกรูมมิ่ง</button></a>
-                    <a href="pages/grab_pet.html"><button>บริการรับ-ส่งสัตว์เลี้ยง</button></a>
+                    <a href="../../pages/pet_care00.html"><button>ฝากเลี้ยง</button></a>
+                    <a href="../../pages/pet_care01.html"><button>ดูแลตามบ้าน</button></a>
+                    <a href="../../pages/pet_care00.html"><button>ดูแลรายวัน</button></a>
+                    <a href="../../pages/pet_care00.html"><button>บริการกรูมมิ่ง</button></a>
+                    <a href="../pages/grab_pet.html"><button>บริการรับ-ส่งสัตว์เลี้ยง</button></a>
                 </div>
             </section>
 
@@ -245,13 +245,13 @@
 
     <article class="cards">
         <section class="card">
-            <img src="img/โลโก้-3.png" alt="Dog Bath" style="width: 100%; border-radius: 10px;">
+            <img src="../../img/โลโก้-3.png" alt="Dog Bath" style="width: 100%; border-radius: 10px;">
         </section>
         <section class="card">
-            <img src="img/โลโก้-5.png" alt="Cat Care" style="width: 100%; border-radius: 10px;">
+            <img src="../../img/โลโก้-5.png" alt="Cat Care" style="width: 100%; border-radius: 10px;">
         </section>
         <section class="card">
-            <img src="img/โลโก้-4.png" alt="Pet Travel" style="width: 100%; border-radius: 10px;">
+            <img src="../../img/โลโก้-4.png" alt="Pet Travel" style="width: 100%; border-radius: 10px;">
         </section>
     </article>
 
@@ -278,23 +278,23 @@
             <section class="social-media">
                 <h3>Follow Us</h3>
                 <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
-                    <img src="img/fb.png" alt="Facebook Logo">
+                    <img src="../../img/fb.png" alt="Facebook Logo">
                 </a>
                 <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
-                    <img src="img/ig.png" alt="Instagram Logo">
+                    <img src="../../img/ig.png" alt="Instagram Logo">
                 </a>
                 <a href="https://twitter.com/" target="_blank" aria-label="Twitter">
-                    <img src="img/x.png" alt="Twitter Logo">
+                    <img src="../../img/x.png" alt="Twitter Logo">
                 </a>
             </section>
 
             <!-- About -->
             <section class="about">
                 <h3>About Us</h3>
-                <p><a href="index.html">หน้าหลัก</a></p>
-                <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-                <p><a href="pages/pet_care.html">บริการกรูมมิ่ง</a></p>
-                <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+                <p><a href="../../index.html">หน้าหลัก</a></p>
+                <p><a href="../../pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+                <p><a href="../../pages/pet_care.html">บริการกรูมมิ่ง</a></p>
+                <p><a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
             </section>
         </article>
     </footer>
