--- a/pages/registration.html
+++ b/pages/registration.html
@@ -279,7 +279,7 @@
                     <section class="form-group terms">
                         <input type="checkbox" id="terms" required>
                         <label for="terms">By registering, you agree to the
-                            <a href="#">Terms and Conditions</a> และ <a href="#">Privacy Policy</a>
+                            <a href="#">Terms and Conditions</a> and <a href="#">Privacy Policy</a>
                         </label>
                         
                     </section>
