--- a/pages/grab_pet.html
+++ b/pages/grab_pet.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #EA73D3;
+            background-color: #FEFAF2;
             color: #210000;
         }
         .logo {
