--- a/pages/qr_promptpay.html
+++ b/pages/qr_promptpay.html
@@ -17,7 +17,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #EA73D3;
+            background-color: #FEFAF2;
             color: #210000;
         }
             .logo {
@@ -253,7 +253,7 @@
             <h3>About Us</h3>
             <p><a href="../../index.html">หน้าหลัก</a></p>
             <p><a href="../../pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="../../pages/pet_care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="../../pages/pet_care00.html">บริการกรูมมิ่ง</a></p>
             <p><a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
         </div>
     </footer>
