--- a/pages/grab_pet.html
+++ b/pages/grab_pet.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Logo -->
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
 
     <!-- Title -->
     <title>Buddy Nest - GrabPet</title>
@@ -14,9 +14,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../../assets/css/globals.css">
     <link rel="stylesheet" href="../../assets/css/navbar.css">
-    <link rel="stylesheet" href="../../assets/css/header.css">
     <link rel="stylesheet" href="../../assets/css/footer.css">
-    <link rel="stylesheet" href="../../assets/css/search.css">
 
     <style>
         
@@ -36,8 +34,8 @@
         }
 
         .search-container {
-            background-color: #FDD7A8;
-            padding: 20px;
+            background-color: #FFD38A;
+            padding: 60px;
             border-radius: 20px;
             display: flex;
             justify-content: space-between;
@@ -113,10 +111,6 @@
         </section>
     </nav>
 
-    <!-- Header -->
-    <header>
-        <img src="../../img/แบนเนอร์.png" alt="BuddyNest Banner">
-    </header>
     <main>
         <div class="search-container">
             <label for="start">ต้นทาง:</label>
@@ -137,8 +131,8 @@
         </div>
 
         <main>
-            <img src="../../img/รูป1.png" alt="icon">
-            <h1>ไม่พบรายการในขณะนี้</h1>
+            <img src="../../img/ไม่พบรถ.png" alt="icon">
+            <h1>ไม่รถในขณะนี้</h1>
         </main>
     </main>
     <br><br><br><br><br><br>
@@ -189,7 +183,7 @@
     <footer class="bottom-footer">
         <p>© 2025 Buddy Nest. All Rights Reserved.</p>
     </footer>
-    
+
     <script>
         // ฟังก์ชันสำหรับการค้นหาบริการ
         function searchServices() {
