--- a/pages/payment/payment-5.html
+++ b/pages/payment/payment-5.html
@@ -123,7 +123,7 @@
                 <h3>About Us</h3>
                 <p><a href="../../index.html">หน้าหลัก</a></p>
                 <p><a href="../../pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-                <p><a href="../../pages/pet_care.html">บริการกรูมมิ่ง</a></p>
+                <p><a href="../../pages/pet_care00.html">บริการกรูมมิ่ง</a></p>
                 <p><a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
             </section>
         </article>
