--- a/pages/pet_care02.html
+++ b/pages/pet_care02.html
@@ -21,6 +21,19 @@
 
 </head>
 <body>
+    <!-- Navbar -->
+    <nav>
+        <section class="logo-container">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+        </section>
+        <section class="auth-buttons">
+            <a href="../../index.html">หน้าหลัก</a>
+            <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="../../pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="../../pages/registration.html"><button>Register</button></a>
+        </section>
+    </nav>
+
     <!-- Header -->
     <header>
         <img src="../../img/แบนเนอร์.png" alt="BuddyNest Banner">
@@ -148,6 +161,8 @@
             </div>
         </div>
     </article>
+
+    <br><br>
     <!-- Services -->
     <section class="services">
         <div class="service-container">
