--- a/pages/my_booking/mybooking-0.html
+++ b/pages/my_booking/mybooking-0.html
@@ -115,6 +115,22 @@
                 <p><strong>ยอดรวมสินค้า:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;฿129.00</strong>
                 </p>
             </div>
+            <div class="booking-summary">
+                <p>ค่าจัดส่ง:
+                    <span style="float:right;">฿20.00</span>
+                </p>
+                <p><strong>ยอดรวมสินค้า:<span style="float:right;">฿129.00</span></strong></p>
+            </div>
+            
+            <!-- ปุ่มยกเลิกการจอง -->
+            <div style="text-align: center; margin-top: 1rem;">
+                <a href="../../pages/my_booking/mybooking-3.html">
+                    <button style="background-color: #ff4d4d; color: white; padding: 0.7rem 1.5rem; border: none; border-radius: 5px; cursor: pointer; font-size: 1rem;">
+                        ยกเลิกการจอง
+                    </button>
+                </a>
+            </div>
+            
         </section>
     </main>
 
