--- a/pages/payment/payment.html
+++ b/pages/payment/payment.html
@@ -33,8 +33,8 @@
     </section>
     </nav>
     </div>
-    <div class="container">
-        <div class="left">
+    <article class="container">
+        <section class="left">
             <h3>รายละเอียดสินค้า</h3>
             <div class="product" onclick="viewDetails()">
                 <img src="../../img/ร้าน-2.png" alt="ร้านค้า" class="logo">
@@ -57,8 +57,8 @@
                 <br>
                 <span class="edit-address" onclick="editAddress()">แก้ไข/เปลี่ยนที่อยู่</span>
             </div>
-        </div>
-        <div class="right">
+        </section>
+        <section class="right">
             <h3>ตัวเลือกการจัดส่ง</h3>
             <div class="delivery-options">
                 <button onclick="selectOption(this, 'delivery-options')">รับ-ส่งด้วยตัวเอง</button>
@@ -81,9 +81,12 @@
                 ส่วนลด:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;฿0<br>
                 ยอดชำระเงินทั้งหมด:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;฿129
             </div>
-            <button id="pay-btn" class="pay-btn" disabled>ยืนยันการชำระเงิน</button>
-        </div>
-    </div>
+            <div class="button-container">
+                <button type="button" class="btn-cancel" onclick="goBack()">ยกเลิก</button>
+                <button id="pay-btn" class="pay-btn" disabled>ยืนยันการชำระเงิน</button>
+            </div>
+        </section>
+    </article>
     <br><br>
     <footer class="main-footer">
         <article class="footer-container">
@@ -157,6 +160,10 @@
         function editAddress() {
             alert("แก้ไขหรือเปลี่ยนที่อยู่");
         }
+        
+        function goBack() {
+            window.history.back(); // กลับไปหน้าที่แล้ว
+        }
     
         document.getElementById('pay-btn').onclick = function() {
             const paymentSelected = document.querySelector('.payment-options button.selected');
@@ -165,7 +172,7 @@
             if (paymentSelected.textContent === "QR PromptPay") {
                 window.location.href = "../../pages/qr_promptpay.html";  
             } else if (paymentSelected.textContent === "บัตรเครดิต/บัตรเดบิต") {
-                window.location.href = "../../pages/crefit_card.html";  
+                window.location.href = "../../pages/credit_card.html";  
             }else if (paymentSelected.textContent === "เงินสด") {
                 window.location.href = "../../pages/my_booking/mybooking-0.html";  
             }
