--- a/pages/payment/payment-2.html
+++ b/pages/payment/payment-2.html
@@ -42,7 +42,7 @@
                 <div class="product-info">
                     <strong>MoSo hotel</strong><br>
                     แมว 1-4 เดือน - ขนยาว<br>
-                    ตู้ป้อนไซโตโนบิติ
+                    ตู้เป่าขนอัตโนมัติ
                 </div>
             </div>
             <div class="address">
@@ -161,7 +161,7 @@
         function editAddress() {
             alert("แก้ไขหรือเปลี่ยนที่อยู่");
         }
-        
+
         function goBack() {
             window.history.back(); // กลับไปหน้าที่แล้ว
         }
