--- a/pages/payment/payment-4.html
+++ b/pages/payment/payment-4.html
@@ -41,7 +41,7 @@
                 <div class="product-info">
                     <strong>Pet Care</strong><br>
                     แมว 1-4 เดือน - ขนยาว<br>
-                    ตู้ป้อนไซโตโนบิติ
+                    ตู้เป่าขนอัตโนมัติ
                 </div>
             </div>
             <div class="address">
@@ -160,7 +160,7 @@
         function editAddress() {
             alert("แก้ไขหรือเปลี่ยนที่อยู่");
         }
-        
+
         function goBack() {
             window.history.back(); // กลับไปหน้าที่แล้ว
         }
