--- a/pages/credit_card.html
+++ b/pages/credit_card.html
@@ -109,9 +109,9 @@
     </nav>
 
     <main>
-        <div class="card-container">
+        <article class="card-container">
             <h1>Credit/Debit Card</h1>
-            <div class="card-box">
+            <section class="card-box">
                 <div class="card-header">
                     <span>Your card information is securely stored</span>
                     <img src="../../img/visa.png" alt="Visa Mastercard">
@@ -133,8 +133,8 @@
                         <button type="submit" class="btn-submit">Confirm</button>
                     </div>
                 </form>
-            </div>
-        </div>
+            </section>
+        </article>
     </main>
     
     <br><br>
