--- a/pages/forgot_your_password.html
+++ b/pages/forgot_your_password.html
@@ -146,13 +146,13 @@
 
 <body>
    
-    <div class="container">
+    <article class="container">
         <!-- Left Panel -->
         <div class="left-panel">
             <img src="../../img/โลโก้-1.png" alt="Buddynest Logo">
         </div>
         <!-- Right Panel -->
-        <div class="right-panel">
+        <section class="right-panel">
 
             <img src="/img/forgot-password.png" style="width: 200px; height: auto;" alt="Forgot Password Icon">
 
@@ -168,8 +168,8 @@
                     <button type="button" class="back-btn" onclick="goBack()">Back to Sign In</button>
                 </div>
             </form>
-        </div>
-    </div>
+        </section>
+    </article>
     
     <script>
         function goBack() {
