--- a/pages/grab_pet.html
+++ b/pages/grab_pet.html
@@ -111,8 +111,8 @@
         </section>
     </nav>
 
-    <main>
-        <div class="search-container">
+    <article>
+        <section class="search-container">
             <label for="start">ต้นทาง:</label>
             <input type="text" id="start" placeholder="ระบุจุดเริ่มต้น">
 
@@ -123,18 +123,18 @@
             <input type="date" id="date">
 
             <button onclick="searchServices()">ค้นหาบริการ</button>
-        </div>
+        </section>
 
-        <div class="vehicle-buttons">
+        <section class="vehicle-buttons">
             <button onclick="selectVehicle('Car')">Car</button>
             <button onclick="selectVehicle('Motorcycle')">Motorcycle</button>
-        </div>
+        </section>
 
         <main>
             <img src="../../img/ไม่พบรถ.png" alt="icon">
             <h1>ไม่รถในขณะนี้</h1>
         </main>
-    </main>
+    </article>
     <br><br><br><br><br><br>
     <footer class="main-footer">
         <article class="footer-container">
