--- a/pages/pet_care01.html
+++ b/pages/pet_care01.html
@@ -2,23 +2,23 @@
 <html lang="th">
 
 <head>
-   <!-- Meta -->
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   <!-- Logo -->
-   <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <!-- Logo -->
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
 
-   <!-- Title -->
-   <title>Buddy Nest - Pet Services</title>
+    <!-- Title -->
+    <title>Buddy Nest - Pet Services</title>
 
-   <!-- CSS -->
-   <link rel="stylesheet" href="../../assets/css/globals.css">
-   <link rel="stylesheet" href="../../assets/css/navbar.css">
-   <link rel="stylesheet" href="../../assets/css/header.css">
-   <link rel="stylesheet" href="../../assets/css/footer.css">
-   <link rel="stylesheet" href="../../assets/css/search-1.css">
-   <link rel="stylesheet" href="../../assets/css/pet_store.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="../../assets/css/globals.css">
+    <link rel="stylesheet" href="../../assets/css/navbar.css">
+    <link rel="stylesheet" href="../../assets/css/header.css">
+    <link rel="stylesheet" href="../../assets/css/footer.css">
+    <link rel="stylesheet" href="../../assets/css/search-1.css">
+    <link rel="stylesheet" href="../../assets/css/pet_store.css">
 
 </head>
 
@@ -42,7 +42,7 @@
     </header>
 
     <article class="search-section">
-        <div class="search-container">
+        <section class="search-container">
             <section class="search-category">
                 <h4>ฉันกำลังมองหา 🔍</h4>
                 <div class="service-buttons">
@@ -161,8 +161,8 @@
                 <h4>ผลลัพธ์การค้นหา:</h4>
                 <ul id="resultsList"></ul>
             </div>
-        </div>
-        </div>
+            </div>
+            </div>
     </article>
 
     <br><br>
