--- a/pages/pet_care02.html
+++ b/pages/pet_care02.html
@@ -40,7 +40,7 @@
     </header>
 
     <article class="search-section">
-        <div class="search-container">
+        <section class="search-container">
             <section class="search-category">
                 <h4>ฉันกำลังมองหา 🔍</h4>
                 <div class="service-buttons">
